<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">

    <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" android:layout_weight="1"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:stretchColumns="1"
            android:scrollbarAlwaysDrawVerticalTrack="true" android:layout_weight="1">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginVertical="5dp" android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/textView_plaintext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:hint="@string/editText_inputText"
                    android:autofillHints="@string/editText_inputText"
                    android:selectAllOnFocus="false" android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginVertical="5dp" android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView3"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText2" android:hint="@string/password_hint"
                    android:autofillHints="@string/password_hint"
                    android:singleLine="true"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginVertical="5dp" android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView5"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText4" android:hint="@string/date_hints"
                    android:autofillHints="@string/date_hints"
                    android:singleLine="true"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/radioButtons_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView6"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:textStyle="bold"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

            >
                <RadioButton
                        android:text="@string/radioButtons_item1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/radioBtn_japanese"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/radioButtons_item2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/radioBtn_french"
                        android:layout_weight="1"/>
                <RadioButton
                        android:text="@string/radioButtons_item3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/radioBtn_chinese"
                        android:layout_weight="1"/>
            </RadioGroup>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/seekBar_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView7"
                    android:textAllCaps="false"
                    android:gravity="center" android:layout_marginHorizontal="10dp"
                    android:textStyle="bold"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/seekBar_volume"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/toggleButton_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView8"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp" android:textStyle="bold"/>
            <ToggleButton
                    android:text="@string/toggleButton_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tglBtn_state"
                    android:textOff="@string/toggleButton_textOff"
                    android:textOn="@string/toggleButton_textOn"
                    android:checked="false"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/switch_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView9"
                    android:gravity="center"
                    android:layout_marginHorizontal="10dp" android:textStyle="bold"/>
            <Switch
                    android:text="@string/switch_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/switch_state"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
                  android:layout_marginVertical="5dp" android:layout_marginHorizontal="10dp">
            <TextView
                    android:text="@string/multilineText_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/textView4"
                    android:textStyle="bold" android:gravity="center"
                    android:layout_marginHorizontal="10dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/editText3" android:hint="@string/multilineText_hints"
                    android:autofillHints="@string/multilineText_hints"
            />
        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" android:layout_weight="1"/>
    <Button
            android:text="@string/button_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/pushBtn_check" android:layout_weight="1"/>
</LinearLayout>
